tests/ui/span/E0536.rs
<<<PULL-UPSTREAM>>> file deleted upstream; move the Ferrocene annotations if any, and delete this file
pub fn main() {
    if cfg!(not()) { } //~ ERROR E0536
}

// ferrocene-annotations: fls_fymvsy6ig99a
// Attribute cfg
